don't push wizard to bottom of window

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -6,8 +6,6 @@
 }
 
 .Wizard--sidebar {
-  .flexbox();
-  .flexDirection(column);
   .flex(0, 0, 200px);
   .padding--m;
   background-color: @neutral_off_white;
@@ -55,7 +53,6 @@
 }
 
 .Wizard--stepsDisplay {
-  .flex(1);
   list-style-type: none;
   .padding--none;
 
@@ -71,7 +68,7 @@
 }
 
 .Wizard--controls {
-  .flex(0, 1);
+  .margin--top--l;
 }
 
 .Wizard--stepsDisplay--stepButton.Button {
