--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -4,7 +4,7 @@
 .MessagingBubble--Message {
   border-radius: 0.3125rem;
   font-size: 1rem;
-  max-width: 25rem;
+  max-width: 36.5rem;
   .text--line-height-4();
   overflow-wrap: break-word;
   white-space: pre-wrap;
@@ -29,14 +29,14 @@
 }
 
 .MessagingBubble--Message--Reply--Own {
-  background-color: #636776; /* stylelint-disable-line */
+  background-color: #626776; /* stylelint-disable-line */
   border-radius: 0.3125rem;
   color: @neutral_white;
   .margin--bottom--s();
 }
 
 .MessagingBubble--Message--Reply--Other {
-  background-color: @neutral_off_white;
+  background-color: #fafbfe; /* stylelint-disable-line */
   border-radius: 0.3125rem;
   color: @neutral_black;
   .margin--bottom--s();
@@ -54,12 +54,23 @@
 
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
-  .MessagingBubble--Message--Own,
-  .MessagingBubble--Message--Other {
+  .MessagingBubble--Message {
     font-size: 0.875rem;
     line-height: 1rem;
     .padding--xs();
     // This improves how long words/links are broken on Chrome mobile and doesn't affect Safari
     overflow-wrap: anywhere;
+  }
+
+  .MessagingBubble--Message--Reply--Parent {
+    .padding--xs();
+  }
+
+  .MessagingBubble--Message--Reply--Own {
+    .margin--bottom--xs();
+  }
+
+  .MessagingBubble--Message--Reply--Other {
+    .margin--bottom--xs();
   }
 }
