Add errorMsg prop to MessagingBubble; update docs

--- a/src/MessagingBubble/MessagingBubble.less
+++ b/src/MessagingBubble/MessagingBubble.less
@@ -7,6 +7,7 @@
   max-width: 36.5rem;
   .text--line-height-4();
   overflow-wrap: break-word;
+  position: relative;
   white-space: pre-wrap;
   word-wrap: break-word; // IE name for overflow-wrap
 }
@@ -50,6 +51,25 @@
   color: inherit;
   .text--semi-bold();
   .text--underline();
+}
+
+.MessagingBubble--Error {
+  color: @alert_red;
+  line-height: 1rem;
+  .margin--right--2xs();
+  .margin--top--2xs();
+  .text--smallMedium();
+  position: absolute;
+  top: 100%;
+  right: 0%;
+}
+
+.MessagingBubble--Error--Icon {
+  .margin--right--2xs();
+}
+
+.MessagingBubble--Error--Parent {
+  padding-bottom: 1.25rem; // line height of message + 4px for margin between message and bubble
 }
 
 // For mobile/tablet
