--- a/docs/components/AlertBox2View.less
+++ b/docs/components/AlertBox2View.less
@@ -4,6 +4,10 @@
   .margin--bottom--xl;
 }
 
+.AlertBox2View--beta {
+  .text--italic();
+}
+
 .AlertBox2View--configContainer {
   .border--top--l(@neutral_silver);
   .margin--top--xl;
